<resources>
    <string name="app_name" translatable="false">PosCtrl-Android</string>
    <string name="no_data_connection">Connection failure</string>
    <string name="hint_user_id">User ID</string>
    <string name="action_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="key_database_server" translatable="false">keyDatabaseServer</string>
    <string name="title_database_server">Server address</string>
    <string name="dialog_database_server">Login server address</string>
    <string name="key_database_user" translatable="false">keyDatabaseUser</string>
    <string name="title_database_user">Database user</string>
    <string name="dialog_database_user">Database user</string>
    <string name="key_database_password" translatable="false">keyDatabasePassword</string>
    <string name="title_database_password">Database password</string>
    <string name="dialog_database_password">Database password</string>
    <string name="action_save">Save</string>
    <string name="insert_number">Insert code</string>
    <string name="insert_security_code">Security code</string>
    <string name="message_saved">Saved</string>
    <string name="action_ok">OK</string>
    <string name="error_wrong_code">Wrong security code</string>
    <string name="error_empty_user">Username can\'t be empty</string>
    <string name="error_empty_password">Password can\'t be empty</string>
    <string name="title_server_port">Server port</string>
    <string name="key_server_path"  translatable="false">keyServerPath</string>
    <string name="key_server_port" translatable="false">keyServerPort</string>
    <string name="key_filter_respond_time" translatable="false">keyFilterRespondTime</string>
    <string name="key_version" translatable="false">keyVersion</string>
    <string name="key_server_user" translatable="false">keyServerUser</string>
    <string name="key_server_domain" translatable="false">keyServerDomain</string>
    <string name="key_server_password" translatable="false">keyServerPassword</string>
    <string name="key_server_snapshot_path" translatable="false">keyServerSnapshotPath</string>
    <string name="message_success_login">Successfully logged in</string>
    <string name="error_no_stores">No stores found for this user</string>
    <string name="key_logged_user" translatable="false">keyLoggedInUser</string>
    <string name="message_store_value">Detected store %1$d %2$s</string>
    <string name="store_value">%1$d, %2$s</string>
    <string name="error_no_registers">No registers found for selected store</string>
    <string name="error_registers_store">No registers were found for store %1$d, %2$s</string>
    <string name="title_select_register">Please select a register</string>
    <string name="key_store_number" translatable="false">keyStoreNumber</string>
    <string name="key_store_name" translatable="false">keyStoreName</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_suspend_register">Suspend register</string>
    <string name="title_app_options">App options</string>
    <string name="key_listen_port" translatable="false">keyListenPort</string>
    <string name="key_last_txn" translatable="false">keyLastTxn</string>
    <string name="key_send_alife" translatable="false">keySendALife-store%1$d-register%2$d</string>
    <string name="title_select_suspend">Select register to suspend</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="confirm_suspend_register">Please confirm suspending register %1$d, from store %2$d</string>
    <string name="key_filter_port">keyFilterPort</string>
    <string name="label_store">Store</string>
    <string name="label_register">Register</string>
    <string name="label_item">Item</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_price">Price</string>
    <string name="error_no_snapshots">No snapshots available</string>
    <string name="action_accept">Accept</string>
    <string name="action_reject">Reject</string>
    <string name="key_notification_sound">keyNotificationSound</string>
    <string name="key_receive_notifications">keyReceiveNotifications</string>
    <string name="key_send_alife_filter">keySendALifeFilter</string>
    <string name="message_timed_out">Timed out</string>
    <string name="error_partial_download">Partially downloaded</string>
    <string name="title_receipt_incomplete_values">Store %1$d, Register %2$d</string>
    <string name="title_receipt_values">Store %1$d, Register %2$d, Txn %3$d</string>

    <string name="action_confirm">Confirm</string>
    <string name="action_suspend">Suspend</string>
    <string name="key_login_server" translatable="false">keyLoginServer</string>
    <string name="key_login_port" translatable="false">keyLoginPort</string>
    <string name="key_app_version" translatable="false">keyAppVersion</string>
    <string name="key_master_password" translatable="false">keyMasterPassword</string>
    <string name="key_time_zone" translatable="false">keyTimeZone</string>
    <string name="key_registers" translatable="false">keyRegisters</string>
    <string name="error_unknown">Unknown error</string>
    <string name="header_settings">Settings</string>
    <string name="key_logged_username" translatable="false">keyLoggedInUserUsername</string>
    <string name="permission_device_admin">Device admin</string>
    <string name="permission_description_admin">Launch on device boot, keep as the only application displayed</string>
    <string name="message_kiosk_enabled">Kiosk mode enabled</string>
    <string name="warning_disabling_kiosk">Warning: this will disable kiosk mode</string>
    <string name="message_kiosk_disabled">Disabled kiosk mode</string>
    <string name="message_changed_password">Security code has been changed</string>
    <string name="action_kiosk_mode">Kiosk mode</string>
    <string name="key_kiosk_mode" translatable="false">keyKioskMode</string>
    <string name="explanation_kiosk_mode">Device manager is required to keep PosCtrl as the only app running</string>
    <string name="title_notification_charging">Charging</string>
    <string name="message_notification_charging">Background service</string>
    <string name="error_download_update">Error downloading app update</string>
    <string name="error_app_update">App update file not found on the server</string>
    <string name="permission_not_granted">Permissions not granted</string>
    <string name="permissions_granted">Permissions granted</string>
    <string name="title_downloading_update">Downloading application update</string>
    <string name="message_wait_download">There is a newer version available. Please wait while the update is being downloaded.</string>
    <string name="key_header_settings">keyHeaderSettings</string>
    <string name="key_last_filter">keyLastFilter</string>
    <string name="filter_values">%1$s %2$s %3$s %4$s</string>
    <string name="title_about">About</string>
    <string name="current_store_value">Current store: %1$s, %2$s</string>
    <string name="app_version_value">App version: %s</string>
    <string name="key_users">keyUsers</string>
    <string name="key_registers_columns">keyRegistersColumns</string>
    <string name="login_value">User: %1$s - %2$s</string>
    <string name="wifi_signal_value">WiFi signal: %d/5</string>
    <string name="title_notification_wifi">Monitoring WiFi</string>
</resources>