<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <PreferenceCategory
        android:key="@string/key_header_settings"
        tools:title="@string/header_settings" />
    <EditTextPreference
        android:dialogLayout="@layout/dialog_et"
        android:dialogTitle="@string/dialog_database_server"
        android:inputType="text"
        android:key="@string/key_login_server"
        android:title="@string/title_database_server"
        app:useSimpleSummaryProvider="true">

    </EditTextPreference>
    <EditTextPreference
        android:dialogLayout="@layout/dialog_et"
        android:dialogTitle="@string/title_server_port"
        android:inputType="number"
        android:key="@string/key_login_port"
        android:title="@string/title_server_port"
        app:useSimpleSummaryProvider="true" />

</androidx.preference.PreferenceScreen>